--- a/agg.html
+++ b/agg.html
@@ -36,8 +36,8 @@
         <div class="row">
             <!-- Content Section -->
             <div class="col-lg-8 col-md-7 col-sm-12 mb-4">
-                <h1>Hoşgeldiniz</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, cum quos vel, maiores assumenda ipsam exercitationem omnis ut doloremque incidunt suscipit voluptates obcaecati necessitatibus nemo voluptatum mollitia ducimus nostrum animi. Enim temporibus architecto libero a aliquam, necessitatibus illum recusandae consectetur impedit iste fugit aspernatur distinctio praesentium nam consequuntur inventore eligendi dicta ratione. Sunt cupiditate ea facilis minus ducimus iusto repellendus maxime deleniti? Sint quaerat commodi quibusdam suscipit iste, eligendi libero harum a, aperiam maiores ea nulla explicabo nihil laudantium. Nobis!</p>
+                <h1>Aggettivi</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nobis architecto rem placeat autem expedita fugit eos, molestias nemo excepturi. Odio adipisci doloribus corrupti perspiciatis voluptate deserunt dolores quisquam necessitatibus aliquam obcaecati, minima voluptates esse. Praesentium sint, saepe possimus tempore dolore voluptas et fuga mollitia exercitationem dignissimos temporibus blanditiis voluptate eum ullam? Velit quas natus quos quia molestias placeat consequuntur nulla, quibusdam nisi adipisci ea illum at enim? Consectetur, libero soluta dignissimos laboriosam accusantium atque minima tempora quasi sequi unde?</p>
             </div>
             
             <!-- Sidebar Section -->
