--- a/avere.html
+++ b/avere.html
@@ -36,8 +36,8 @@
         <div class="row">
             <!-- Content Section -->
             <div class="col-lg-8 col-md-7 col-sm-12 mb-4">
-                <h1>Hoşgeldiniz</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, cum quos vel, maiores assumenda ipsam exercitationem omnis ut doloremque incidunt suscipit voluptates obcaecati necessitatibus nemo voluptatum mollitia ducimus nostrum animi. Enim temporibus architecto libero a aliquam, necessitatibus illum recusandae consectetur impedit iste fugit aspernatur distinctio praesentium nam consequuntur inventore eligendi dicta ratione. Sunt cupiditate ea facilis minus ducimus iusto repellendus maxime deleniti? Sint quaerat commodi quibusdam suscipit iste, eligendi libero harum a, aperiam maiores ea nulla explicabo nihil laudantium. Nobis!</p>
+                <h1>Avere</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex eligendi atque voluptate dicta et vitae iste maiores corporis quasi consequuntur eos beatae minus est ea eum, quibusdam animi sunt accusantium eveniet? Voluptate autem et doloribus aliquid ea inventore quod qui molestias excepturi velit voluptas error at architecto soluta asperiores non nisi atque neque hic est eaque, eum, reiciendis optio maiores! Ex officiis repellendus ipsam incidunt eos omnis eligendi quisquam pariatur illo aliquam neque inventore, sint voluptatum, sed, placeat eius architecto?</p>
             </div>
             
             <!-- Sidebar Section -->
