--- a/essere.html
+++ b/essere.html
@@ -36,8 +36,8 @@
         <div class="row">
             <!-- Content Section -->
             <div class="col-lg-8 col-md-7 col-sm-12 mb-4">
-                <h1>Hoşgeldiniz</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, cum quos vel, maiores assumenda ipsam exercitationem omnis ut doloremque incidunt suscipit voluptates obcaecati necessitatibus nemo voluptatum mollitia ducimus nostrum animi. Enim temporibus architecto libero a aliquam, necessitatibus illum recusandae consectetur impedit iste fugit aspernatur distinctio praesentium nam consequuntur inventore eligendi dicta ratione. Sunt cupiditate ea facilis minus ducimus iusto repellendus maxime deleniti? Sint quaerat commodi quibusdam suscipit iste, eligendi libero harum a, aperiam maiores ea nulla explicabo nihil laudantium. Nobis!</p>
+                <h1>Essere</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora unde dicta repudiandae assumenda dolorem ut culpa delectus eaque similique consectetur accusantium dolores ea minima necessitatibus reprehenderit commodi consequuntur, aperiam quo suscipit dignissimos reiciendis sunt. Consectetur vel eius a officia explicabo!</p>
             </div>
             
             <!-- Sidebar Section -->
