--- a/numero.html
+++ b/numero.html
@@ -36,13 +36,13 @@
         <div class="row">
             <!-- Content Section -->
             <div class="col-lg-8 col-md-7 col-sm-12 mb-4">
-                <h1>Hoşgeldiniz</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, cum quos vel, maiores assumenda ipsam exercitationem omnis ut doloremque incidunt suscipit voluptates obcaecati necessitatibus nemo voluptatum mollitia ducimus nostrum animi. Enim temporibus architecto libero a aliquam, necessitatibus illum recusandae consectetur impedit iste fugit aspernatur distinctio praesentium nam consequuntur inventore eligendi dicta ratione. Sunt cupiditate ea facilis minus ducimus iusto repellendus maxime deleniti? Sint quaerat commodi quibusdam suscipit iste, eligendi libero harum a, aperiam maiores ea nulla explicabo nihil laudantium. Nobis!</p>
+                <h1>Numero</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A laudantium voluptas nemo voluptatem totam. Totam consectetur minima laborum explicabo recusandae provident. Minus debitis possimus dolore voluptas veritatis quod consectetur, maxime autem provident ab eaque numquam! Fugiat natus molestiae modi laudantium maxime facilis officiis id, alias illo, tenetur, laborum et sapiente nostrum ipsa reprehenderit similique dolores deleniti nemo! Repudiandae rem, sed ducimus omnis dolorum totam, quidem consequuntur laudantium distinctio expedita minus similique unde. Perferendis illum eveniet alias praesentium, repudiandae omnis quasi!</p>
             </div>
             
             <!-- Sidebar Section -->
             <div class="col-lg-4 col-md-5 col-sm-12">
-                <h2>Konu Anlatımı</h2>
+                <h2>konu Anlatımı</h2>
                 <ul class="list-group">
                     <li class="list-group-item">
                         <a href="genere.html" class="list-group-item-action">01. Genere</a>
