--- a/presente.html
+++ b/presente.html
@@ -36,8 +36,8 @@
         <div class="row">
             <!-- Content Section -->
             <div class="col-lg-8 col-md-7 col-sm-12 mb-4">
-                <h1>Hoşgeldiniz</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, cum quos vel, maiores assumenda ipsam exercitationem omnis ut doloremque incidunt suscipit voluptates obcaecati necessitatibus nemo voluptatum mollitia ducimus nostrum animi. Enim temporibus architecto libero a aliquam, necessitatibus illum recusandae consectetur impedit iste fugit aspernatur distinctio praesentium nam consequuntur inventore eligendi dicta ratione. Sunt cupiditate ea facilis minus ducimus iusto repellendus maxime deleniti? Sint quaerat commodi quibusdam suscipit iste, eligendi libero harum a, aperiam maiores ea nulla explicabo nihil laudantium. Nobis!</p>
+                <h1>Presente</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, aspernatur maxime! Perspiciatis vitae sequi magni recusandae sunt minus facilis ipsa. Quas hic atque fuga autem ex numquam fugiat culpa est temporibus tempore, doloribus ab tenetur, rerum adipisci earum? Mollitia, error eius! Eveniet, numquam illum tempora aut quo quae eos temporibus.</p>
             </div>
             
             <!-- Sidebar Section -->
