--- a/genere.html
+++ b/genere.html
@@ -36,8 +36,8 @@
         <div class="row">
             <!-- Content Section -->
             <div class="col-lg-8 col-md-7 col-sm-12 mb-4">
-                <h1>Hoşgeldiniz</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, cum quos vel, maiores assumenda ipsam exercitationem omnis ut doloremque incidunt suscipit voluptates obcaecati necessitatibus nemo voluptatum mollitia ducimus nostrum animi. Enim temporibus architecto libero a aliquam, necessitatibus illum recusandae consectetur impedit iste fugit aspernatur distinctio praesentium nam consequuntur inventore eligendi dicta ratione. Sunt cupiditate ea facilis minus ducimus iusto repellendus maxime deleniti? Sint quaerat commodi quibusdam suscipit iste, eligendi libero harum a, aperiam maiores ea nulla explicabo nihil laudantium. Nobis!</p>
+                <h1>Genere</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nobis aut porro error laboriosam pariatur totam illum distinctio dolorum officiis ut odio consequatur ullam hic dolore id vitae harum placeat itaque saepe adipisci veniam voluptatem fugit? Et ex dolores, mollitia recusandae quibusdam excepturi tempore cupiditate consequatur veniam, unde deleniti quasi enim sunt! Voluptates facilis reprehenderit quam explicabo quos consectetur vero atque ab modi maxime officiis blanditiis, eius hic aut aspernatur mollitia quia dolorem, nisi corporis accusamus, veritatis doloremque suscipit illum!</p>
             </div>
             
             <!-- Sidebar Section -->
