--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger ">
-        <a class="navbar-brand" href="https://www.italyancahayalet.com/">İtalyanca Hayal Et</a>
+        <a class="navbar-brand" href="#">İtalyanca Hayal Et</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.italyancahayalet.com/">Ana Sayfa</a>
+                    <a class="nav-link" href="#">Ana Sayfa</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="#">Hakkımızda</a>
