--- a/avere.html
+++ b/avere.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success ">
         <a class="navbar-brand" href="https://www.italyancahayalet.com/">İtalyanca Hayal Et</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
