--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container ">
+        <img src="img/ita.jpg" alt="desc" width="700" height="200"></div>
+    
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success ">
         <a class="navbar-brand" href="#">İtalyanca Hayal Et</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
