--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container ">
-        <img src="img/ita.jpg" alt="desc" width="700" height="200"></div>
+    <div >
+        <img src="img/ita.jpg" alt="desc"  id="kutu-img" width="400" height="100"></div>
     
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success ">
